# Coin

./: .gitignore  ADD_HOLDINGS_INSERT_POLICY.sql  ADD_PROFILE_INSERT_POLICY.sql  ARCHITECTURE.md  AUTOMATION_IMPROVEMENT_PLAN.md  CLEAN_ZERO_HOLDINGS.sql  FIX_DEFAULT_USER_RLS.sql  FIX_HOLDINGS_RLS.sql  FIX_HOLDINGS_RLS_COMPLETE.sql  FIX_INSTRUCTIONS.md  FIX_WATCHLIST_ISSUE.md  GIT_SETUP.md  PROJECT_PLAN.md  RATE_LIMIT_ANALYSIS.md  README.md  RENDER_QUICK_START.md  RENDER_SETUP.md  SETUP_DATABASE.md  render.yaml
backend/: .env.example  Cargo.toml  Dockerfile  automation.sql  check_output.txt  compile_log.txt  compile_log_2.txt  debug_log.txt  diag.txt  dns_c.txt  errors.txt  errors_ssl.txt  run_check.ps1  run_log.txt  run_log_2.txt  start_backend.ps1  start_server.ps1  test_connection.rs  update_connection.ps1
backend/.sqlx/: query-16e6a6f0617fc652bf7f2bc98c17cad0e24e42e6aa0fa033baac9a428b31962a.json  query-20d822c85857028c785760a589fe4516b67e928c6ea5309f68d043394c528db1.json  query-37c2561ba1dd8b66244ed43c5bd690eb9361163dd3f28143d0c2c3fa08394790.json  query-657a676c1e9467d0a8b467566066c6f529b89eccd5864795fceb087882b478a2.json  query-7057be88bf3716e637ed98c0e974853bc3b0e93d714d32af1ddbd6d4eccab435.json  query-7385cb1eeefffb348d51d6d478456508d9ee8505faf1127c1fb73bb7531efca3.json  query-8da8e3f19d51dd18a39ced388fef8cd1f066d32aef7ca0c9292afcb4c4587a20.json  query-97b3f845b0872064306e5157e828b3c355a2e92ad11942e0f31265cd03ff8c3e.json  query-9b655fc0e58a074ed99622ca79dfa90194020fc018c1961b5344dfd34b11f385.json  (+4 more)
backend/src/: config.rs  database.rs  main.rs  models.rs  state.rs  (+1 more)
(+108 files in other folders)
